# rust-prisma-client-impl

./: .gitignore  Cargo.toml  README.md  dev.db
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230311121119_init/: migration.sql
prisma/migrations/20230311121541_id_type_change/: migration.sql
prisma/migrations/20230311153048_init/: migration.sql
src/: main.rs  prisma.rs
